Update content linke for img meta

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,7 @@
       property="og:title"
       content="Reasons for Learning React"
     />
-    <meta
-      name="image"
-      property="og:image"
-      content="public/preview-desktop.png"
-    />
+    <meta name="image" property="og:image" content="./preview-desktop.png" />
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <title>Practice Project | Reasons for Learning React</title>
   </head>
