Update content linke for img meta

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta
       name="image"
       property="og:image"
-      content="public/preview-desktop.png"
+      content="https://github.com/jdfdoyley/pp-reason/blob/main/public/preview-desktop.png"
     />
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <title>Practice Project | Reasons for Learning React</title>
